add series sequence
